Rename master nodes to primary nodes
